# wkbre2

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: main.yml
continuous-integration/: build.py
continuous-integration/ubuntu-24.04/: install_dependencies.sh  install_uv.sh  install_vcpkg.sh  setup.sh
redata/: ClientUIScript.chai  ClientUIScript.lua
shaders/: EnhBasicShader.hlsl  compile.bat
wkbre2/: AIController.cpp  AIController.h  BreakpointManager.cpp  BreakpointManager.h  CMakeLists.txt  Camera.cpp  Camera.h  Doxyfile  FormationController.cpp  FormationController.h  GameObjectRef.h  Language.cpp  Language.h  Model.cpp  Model.h  Movement.cpp  Movement.h  MovementController.cpp  MovementController.h  NNSearch.cpp  NNSearch.h  Order.cpp  Order.h  ParticleContainer.cpp  ParticleContainer.h  ParticleSystem.cpp  ParticleSystem.h  Pathfinding.h  SoundPlayer.cpp  SoundPlayer.h  StampdownPlan.cpp  StampdownPlan.h  TimeManager.cpp  TimeManager.h  Trajectory.cpp  Trajectory.h  TrnTextureDb.cpp  TrnTextureDb.h  WavDocument.cpp  WavDocument.h  (+39 more)
wkbre2/gameset/: 3DClip.cpp  3DClip.h  ArmyCreationSchedule.cpp  ArmyCreationSchedule.h  CMakeLists.txt  Commission.cpp  Commission.h  CommonEval.h  Footprint.cpp  Footprint.h  GSTerrain.cpp  GSTerrain.h  GameObjBlueprint.cpp  GameObjBlueprint.h  GameTextWindow.cpp  GameTextWindow.h  ObjectCreation.cpp  ObjectCreation.h  OrderBlueprint.cpp  OrderBlueprint.h  Package.cpp  Package.h  Plan.cpp  Plan.h  ScriptContext.cpp  ScriptContext.h  Sound.cpp  Sound.h  WorkOrder.cpp  WorkOrder.h  actions.cpp  actions.h  cameraPath.cpp  cameraPath.h  command.cpp  command.h  condition.cpp  condition.h  finder.cpp  finder.h  (+8 more)
wkbre2/gfx/: CMakeLists.txt  D3D11EnhancedSceneRenderer.cpp  D3D11EnhancedSceneRenderer.h  D3D11EnhancedTerrainRenderer.cpp  D3D11EnhancedTerrainRenderer.h  DefaultMeshRenderer.cpp  DefaultMeshRenderer.h  DefaultParticleRenderer.cpp  DefaultParticleRenderer.h  DefaultSceneRenderer.cpp  DefaultSceneRenderer.h  DefaultTerrainRenderer.cpp  DefaultTerrainRenderer.h  MeshRenderer.h  ParticleRenderer.h  SceneRenderer.h  TerrainRenderer.h  TerrainSpriteContainer.cpp  TerrainSpriteContainer.h  TerrainSpriteRenderer.cpp  TerrainSpriteRenderer.h  TextureCache.cpp  TextureCache.h  bitmap.cpp  bitmap.h  renderer.cpp  renderer.h  renderer_d3d11.cpp  renderer_d3d11.h  renderer_d3d9.cpp  renderer_ogl3.cpp  renderer_vulkan.cpp
wkbre2/imgui/: CMakeLists.txt  imgui.cpp
wkbre2/interface/: CMakeLists.txt  ClientDebugger.cpp  ClientDebugger.h  ClientInterface.cpp  ClientInterface.h  GameSetDebugger.cpp  GameSetDebugger.h  QuickSkirmishMenu.cpp  QuickSkirmishMenu.h  QuickStartMenu.cpp  QuickStartMenu.h  ServerDebugger.cpp  ServerDebugger.h
wkbre2/tools/: t2cpp.py
wkbre2/util/: BinaryReader.h  CMakeLists.txt  DynArray.h  GSFileLocation.cpp  GSFileLocation.h  GSFileParser.cpp  GSFileParser.h  IndexedStringList.h  StriCompare.h  TagDict.h  growbuffer.cpp  growbuffer.h  util.cpp  util.h  vecmat.cpp  vecmat.h
wkbre2/util/include/util/: DynArray.h  GSFileParser.h  StriCompare.h  TagDict.h  vecmat.h
